Fixed spacing between image on services page mobile

--- a/hypnoinsight/src/pages/Services/Services.scss
+++ b/hypnoinsight/src/pages/Services/Services.scss
@@ -52,7 +52,7 @@
     margin-top: 1.5rem;
 
     &__overview {
-        padding: 1rem 0 0.5rem;
+        padding-bottom: 0.5rem;
         font-size: 16px;
     }
 
@@ -62,7 +62,6 @@
 
     &__image-container {
         display: flex;
-        margin: 1rem 0;
     }
 
     &__image {
